--- a/code/TX_dw_analysis_crosswalk.Rmd
+++ b/code/TX_dw_analysis_crosswalk.Rmd
@@ -2,7 +2,7 @@
 title: "TX Drinking Water Data Analysis - Crosswalk"
 author: "EmmaLi Tsai"
 date: "2024-04-01"
-last_updated: "2024-04-03"
+last_updated: "2024-04-04"
 output: html_document
 ---
 
@@ -901,4 +901,394 @@ ggplot(pop_den_comparison, aes(x = sdwis_crosswalk_percent_diff, y = pop_density
   geom_smooth(color = "black", fill = "grey") + 
   theme_minimal() + 
   labs(x = "% Difference", y = "Population Density")
+```
+
+
+## Testing method on full dataset for TX - a small test case: 
+```{r}
+###############################################################################
+# Finding cutoff point for area: 
+###############################################################################
+ggplot(pop_den_comparison, 
+       aes(x = area_miles, y = sdwis_interp_percent_diff)) + 
+  geom_point() + 
+  geom_smooth(color = "grey") + 
+  geom_point(data = pop_den_comparison %>% filter(pop_density > 100000), 
+             color = "red") + 
+  xlim(0, 5) +
+  # geom_smooth() + 
+  # geom_smooth(color = "red", fill = "grey") +
+  theme_minimal() +
+  labs(x = "SAB area (miles)", y = "% Difference, Areal Interpolation")
+
+pop_den_comparison %>%
+  as.data.frame() %>%
+  select(-geometry) %>%
+  mutate(area_bin = cut(area_miles, 
+                       breaks = c(unique(quantile(area_miles, 
+                                           probs = seq(0, 1, by = 0.20), 
+                                           na.rm = TRUE))), 
+                       include.lowest = TRUE)) %>%
+  group_by(area_bin) %>%
+  summarize(total_utilities = n(), 
+            mean_per_diff = mean(sdwis_interp_percent_diff)) 
+
+# area <= 0.054 seems like a good breaking point between methods
+###############################################################################
+# Testing splitting methods: 
+###############################################################################
+# want to use sdwis populations for these: 
+use_sdwis <- demo$census %>%
+  filter(area_miles <= 0.054) %>%
+  st_transform(., crs = "ESRI:102296") %>%  
+  filter(!st_is_empty(.))%>%
+  select(pwsid, geometry)
+
+# basically want to use SDWIS populations but keep proportions of things 
+# relatively consistent from areal interpolation - keeping census vars 
+# simple for now: 
+census_vars <- c(total_pop = "B01003_001",
+                 white_alone = "B02001_002")
+
+tx_census <- tidycensus::get_acs(
+  geography = "tract", 
+  variables = census_vars, 
+  state = c("TX"), 
+  year = 2020,
+  geometry = TRUE
+) 
+
+tx_wide <- pivot_wider(tx_census, 
+                       names_from = c("variable"), 
+                       values_from = c("estimate", "moe")) %>%
+  select(GEOID:estimate_white_alone) %>%
+  st_transform(., crs = "ESRI:102296") %>%  
+  filter(!st_is_empty(.))
+
+# interpolating: 
+test_inter <- areal::aw_interpolate(use_sdwis, tid="pwsid", 
+                                    source=tx_wide, 
+                                    sid="GEOID", 
+                                    # weight = "sum",
+                                    weight = "total",
+                                    output="sf", 
+                                    extensive = c("estimate_total_pop", 
+                                                  "estimate_white_alone"))
+                                    # intensive = "mhi_percent_uni")
+
+# grabbing pwsid sdwis values for the filtered data: 
+pwsid_sdwis <- demo$census %>%
+  filter(area_miles <= 0.054) %>%
+  as.data.frame() %>%
+  select(-geometry) %>%
+  select(pwsid, population_served_count)
+
+# testing keeping proportions constant while using sdwis population: 
+test_inter <- test_inter %>%
+  mutate(proportion = estimate_white_alone/estimate_total_pop) %>%
+  left_join(pwsid_sdwis) %>%
+  mutate(white_alone_test = population_served_count*proportion)
+
+
+###############################################################################
+# Testing interpolating over non-count vars:  
+###############################################################################
+census_vars <- c(total_pop = "B01003_001",
+                 # race and ethnicity stats: 
+                 black_alone = "B02001_003", 
+                 asian_alone = "B02001_005", 
+                 white_alone = "B02001_002", 
+                 AIAN_alone = "B02001_004", 
+                 NAPI_alone = "B02001_006", 
+                 other_alone = "B02001_007", 
+                 mixed_alone = "B02001_008",
+                 hisp_alone = "B03003_003", 
+                 # MHI
+                 mhi = "B19013_001", 
+                 # labor force and unemployment: 
+                 laborforce = "B23025_003",  # universe: pop > 16
+                 laborforce_unemployed = "B23025_005", # universe: pop > 16
+                 # households below poverty level: 
+                 hh_total = "B17017_001",
+                 hh_below_pov = "B17017_002", 
+                 # age stats: 
+                 ageunder_5  = "B06001_002",
+                 age5_17 = "B06001_003", 
+                 age18_24 = "B06001_004",
+                 age25_34 = "B06001_005", 
+                 age35_44 = "B06001_006", 
+                 age45_54 = "B06001_007", 
+                 age55_59 = "B06001_008", 
+                 age60_61 = "B06001_009",
+                 # language spoken at home: 
+                 only_english = "B99162_002",  # universe: pop >5
+                 other_lang = "B99162_003", # universe: pop >5
+                 # education categories: 
+                 no_school = "B15003_002", 
+                 high_school = "B15003_017", 
+                 bachelors = "B15003_022",
+                 prof_degree = "B15003_024", 
+                 # nationality: 
+                 foreign = "B99051_005")
+
+tx_census <- tidycensus::get_acs(
+  geography = "tract", 
+  variables = census_vars, 
+  state = c("TX"), 
+  year = 2020,
+  geometry = TRUE
+) 
+
+tx_wide <- pivot_wider(tx_census, 
+                       names_from = c("variable"), 
+                       values_from = c("estimate", "moe")) %>%
+  select(GEOID:estimate_other_lang)
+
+# calculating the percent MHI for the entire universe: 
+test <- tx_wide %>%
+  select(GEOID, estimate_mhi) %>%
+  mutate(mhi_percent_uni = estimate_mhi / sum(tx_wide$estimate_mhi, na.rm = T))%>%
+  st_transform(., crs = "ESRI:102296") %>%  
+  filter(!st_is_empty(.))
+
+# grabbing sabs:
+test_sdiws <- demo$census %>%
+  st_transform(., crs = "ESRI:102296") %>%  
+  filter(!st_is_empty(.))%>%
+  select(pwsid, geometry)
+
+# interpoltating - need to use summed weights when using the spatially 
+# intensive method: 
+test_inter <- areal::aw_interpolate(test_sdiws, tid="pwsid", 
+                                    source=test, 
+                                    sid="GEOID", 
+                                    weight = "sum",
+                                    # weight = "total",
+                                    output="sf", 
+                                    intensive = "mhi_percent_uni")
+
+# recalculating mhi by multiplying by total universe: 
+test_mhi <- test_inter %>%
+  mutate(mhi = mhi_percent_uni*sum(tx_wide$estimate_mhi, na.rm = T))
+
+# comparing mhi methods using crosswalk vs areal interpolation: 
+mhi_comp <- test_mhi %>%
+  as.data.frame() %>%
+  select(-geometry) %>%
+  left_join(keys$analysis_keys)
+
+ggplot(mhi_comp, aes(x = mhi, y = estimate_mhi)) + 
+  geom_point() + 
+  geom_smooth() + 
+  theme_minimal() + 
+  labs(x = "MHI - Areal Interpolation Method", 
+       y = "MHI - Crosswalk Method")
+# sweet - pretty close 1:1 relationship 
+```
+
+
+## Testing the method with the full socioeconomic dataset: 
+```{r}
+###############################################################################
+# Let's try doing the entire thing
+###############################################################################
+sab <- demo$census %>%
+  select(pwsid:pop_density, service_area_type_code)%>%
+  st_transform(., crs = "ESRI:102296") %>%
+  filter(!st_is_empty(.))
+
+census_vars <- c(total_pop = "B01003_001",
+                 # race and ethnicity stats: 
+                 black_alone = "B02001_003", 
+                 asian_alone = "B02001_005", 
+                 white_alone = "B02001_002", 
+                 AIAN_alone = "B02001_004", 
+                 NAPI_alone = "B02001_006", 
+                 other_alone = "B02001_007", 
+                 mixed_alone = "B02001_008",
+                 hisp_alone = "B03003_003", 
+                 # MHI - will have to do mhi separately since it is a non-count 
+                 # varibale 
+                 mhi = "B19013_001",
+                 # labor force and unemployment: 
+                 laborforce = "B23025_003",  # universe: pop > 16
+                 laborforce_unemployed = "B23025_005", # universe: pop > 16
+                 # households below poverty level: 
+                 hh_total = "B17017_001",
+                 hh_below_pov = "B17017_002", 
+                 # age stats: 
+                 ageunder_5  = "B06001_002",
+                 age5_17 = "B06001_003", 
+                 age18_24 = "B06001_004",
+                 age25_34 = "B06001_005", 
+                 age35_44 = "B06001_006", 
+                 age45_54 = "B06001_007", 
+                 age55_59 = "B06001_008", 
+                 age60_61 = "B06001_009",
+                 # language spoken at home: 
+                 only_english = "B99162_002",  # universe: pop >5
+                 other_lang = "B99162_003", # universe: pop >5
+                 # education categories: 
+                 no_school = "B15003_002", 
+                 high_school = "B15003_017", 
+                 bachelors = "B15003_022",
+                 prof_degree = "B15003_024", 
+                 # nationality: 
+                 foreign = "B99051_005")
+
+tx_census <- tidycensus::get_acs(
+  geography = "tract", 
+  variables = census_vars, 
+  # grab stats for neighboring states since the crosswalk
+  # uses them for SABs close to the border: 
+  state = c("TX", "AR", "OK", "NM", "LA"), 
+  year = 2020,
+  geometry = TRUE
+) 
+
+tx_wide <- pivot_wider(tx_census, 
+                       names_from = c("variable"), 
+                       values_from = c("estimate", "moe")) %>%
+  select(GEOID:estimate_other_lang) %>%
+  st_transform(., crs = "ESRI:102296")
+
+# interpolating: 
+# extensive_vars <- unique(paste0("estimate_", tx_census$variable))
+tx_inter <- areal::aw_interpolate(sab, tid = "pwsid", 
+                                  source = tx_wide, 
+                                  sid= "GEOID", 
+                                  weight = "total",
+                                  output="sf", 
+                                  # for some reason, function can't handle a vector
+                                  # some light reorg to make it easier to 
+                                  # calculate percentages: 
+                                  extensive = c("estimate_total_pop", 
+                                                "estimate_white_alone", 
+                                                "estimate_black_alone", 
+                                                "estimate_AIAN_alone", 
+                                                "estimate_asian_alone", 
+                                                "estimate_NAPI_alone", 
+                                                "estimate_other_alone", 
+                                                "estimate_mixed_alone", 
+                                                "estimate_hisp_alone", 
+                                                "estimate_foreign", 
+                                                "estimate_only_english", 
+                                                "estimate_other_lang",
+                                                "estimate_ageunder_5", 
+                                                "estimate_age5_17", 
+                                                "estimate_age18_24", 
+                                                "estimate_age25_34", 
+                                                "estimate_age35_44", 
+                                                "estimate_age45_54", 
+                                                "estimate_age55_59", 
+                                                "estimate_age60_61", 
+                                                "estimate_no_school", 
+                                                "estimate_high_school",
+                                                "estimate_bachelors", 
+                                                "estimate_prof_degree", 
+                                                "estimate_hh_total", 
+                                                "estimate_hh_below_pov", 
+                                                "estimate_laborforce", 
+                                                "estimate_laborforce_unemployed"))
+
+# flag for pwsids where we're using the SDWIS method: 
+tx_inter <- tx_inter %>%
+  mutate(sdwis_flag = case_when(area_miles <= 0.054 ~ "SDWIS", 
+                                TRUE ~ "Areal"))
+
+# interpolating for mhi - since this is spatially intensive and requires 
+# summed weights: 
+tx_wide_mhi <- tx_wide %>%
+  mutate(mhi_percent_uni = estimate_mhi / sum(tx_wide$estimate_mhi, na.rm = T))%>%
+  st_transform(., crs = "ESRI:102296") %>%  
+  filter(!st_is_empty(.))
+
+mhi_inter <- areal::aw_interpolate(sab, tid="pwsid", 
+                                   source=tx_wide_mhi, 
+                                   sid="GEOID", 
+                                   weight = "sum",
+                                   output="sf", 
+                                   intensive = "mhi_percent_uni")
+
+# recalculating mhi by multiplying by total universe: 
+pwsid_mhi <- mhi_inter %>%
+  mutate(estimate_mhi = mhi_percent_uni*sum(tx_wide$estimate_mhi, na.rm = T)) %>%
+  as.data.frame() %>%
+  select(-geometry) %>%
+  select(pwsid, estimate_mhi)
+
+# reorganizing for clarity: 
+tx_inter_clean_per <- tx_inter %>%
+  select(starts_with(c("pwsid", "area_miles", "sdwis_flag",
+                       "population_served_count",
+                       "estimate"))) %>%
+  relocate(estimate_total_pop, .before = estimate_age18_24) %>%
+  # adding median household income: 
+  left_join(pwsid_mhi) %>%
+  # leaving out columns that shouldn't be divided:
+  mutate_at(vars(!c("estimate_total_pop", "area_miles", 
+                    "estimate_mhi", "pwsid", "population_served_count", 
+                    "estimate_laborforce", "estimate_laborforce_unemployed", 
+                    "estimate_hh_total", "estimate_hh_below_pov", "sdwis_flag")),
+            ~((./estimate_total_pop)*100)) %>%
+  # calculating percentages where the universe is not total population: 
+  mutate(estimate_laborforce_unemployed = (estimate_laborforce_unemployed/estimate_laborforce)*100, 
+         estimate_hh_below_pov = (estimate_hh_below_pov/estimate_hh_total)*100, 
+         estimate_poc_alone = (100 - estimate_white_alone)) %>%
+  relocate("pwsid") %>%
+  as.data.frame() %>%
+  select(-c(geometry, area_miles, sdwis_flag, population_served_count))
+colnames(tx_inter_clean_per) <- paste0(colnames(tx_inter_clean_per), "_per")
+
+# merging this back so we have the original census numbers as well:  
+sab_census <- merge(tx_inter, tx_inter_clean_per, by.x = "pwsid", 
+                    by.y = "pwsid_per") %>%
+  select(-c(estimate_total_pop_per, estimate_hh_total_per)) %>%
+  rename(estimate_mhi = estimate_mhi_per)
+
+# mutliplying SDWIS populations by percentages found through areal interpolation 
+# Aiming to keep relative proportion the same for utilities that we decided should
+# use SDWIS estimates
+tx_sdwis_fix <- sab_census %>%
+  filter(sdwis_flag == "SDWIS") %>%
+  as.data.frame() %>%
+  select(-c(estimate_mhi, estimate_poc_alone_per, geometry)) %>%
+  select("pwsid", "population_served_count", ends_with("_per")) %>%
+  # leaving out columns that shouldn't be divided:
+  mutate_at(vars(estimate_age18_24_per:estimate_white_alone_per),
+            ~((./100)*population_served_count)) %>% 
+  rename(estimate_total_pop = population_served_count)
+names(tx_sdwis_fix) <- gsub("_per", "", names(tx_sdwis_fix))
+
+# tidying fixed dataset to match sab_census for recombining: 
+need_fix <- sab_census %>%
+  filter(sdwis_flag == "SDWIS") 
+tx_sdwis_fixed <- merge(need_fix, tx_sdwis_fix, by = "pwsid") %>%
+  select(!ends_with(".x")) 
+names(tx_sdwis_fixed) <- gsub("\\.y$", "", names(tx_sdwis_fixed))
+tx_sdwis_fixed <- tx_sdwis_fixed[ ,names(sab_census)]
+
+# recombining: 
+sab_census_areal <- sab_census %>% 
+  filter(sdwis_flag == "Areal")
+
+sab_census_final <- rbind(sab_census_areal, tx_sdwis_fixed)
+
+# reordering columns: 
+name_order <- demo$census %>% 
+  mutate(sdwis_flag = "NA")
+sab_census_final_areal <- sab_census_final[ ,names(name_order)]
+```
+
+## Investigating results: 
+```{r}
+areal_results <- sab_census_final_areal %>%
+  mutate(percent_diff = ((population_served_count - estimate_total_pop)/((population_served_count + estimate_total_pop)/2))*100)
+crosswalk_results <- demo$census %>%
+  mutate(percent_diff = ((population_served_count - estimate_total_pop)/((population_served_count + estimate_total_pop)/2))*100)
+
+ggplot(areal_results, aes(x = percent_diff, 
+                                   y = area_miles)) + 
+  geom_point() + 
+  geom_point(data = crosswalk_results, color = "red")
 ```
